# lex-atc

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  docker-compose.ha.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  webhook-test.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/fullstack/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cd.yml  ci-combined.yml  ci.yml  e2e.yml
deploy/k8s/: backend-deployment.yaml
docs/: README.md  architecture.md  checklist.md  contract-mode.md  cost.md  demo.md  docsite.md  glossary.md  motivation.ko.md  motivation.md  operations.md  release-gate.md  roadmap.ko.md  roadmap.md  style.md  ui-guide.md
docs/deployment/: render.md
docs/dev/: env-loading.md  native-deps.md
docs/ops/: command-spec-checklist.md  runbook-secrets-and-release.md  workflow-secrets.json  workflow-secrets.md
grafana/dashboards/: atc-dashboard.json
grafana/provisioning/alerting/: alerting.yml  templates.yml
grafana/provisioning/dashboards/: dashboard.yml
prometheus/: prometheus.yml
scripts/: check-command-specs.js  check-doc-links.js  check-workflow-secrets.js  doctor.js  export-release-env-json.js  postinstall.js  release-check.js  workflow-secrets-doc.js  workflow-secrets-policy.js
scripts/release-env/: normalize.jq
services/ml-watcher/: Dockerfile  README.md  main.py  pyproject.toml
