[project]
name = "lex-atc-ml-watcher"
version = "0.1.0"
description = "Machine Learning Anomaly Detection API for Lex ATC"
authors = [{ name = "Lex ATC Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
